# honest-backtest

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dataset/: DATASHEET.md  export_open_dataset.py  load_example.py  sqlite_to_parquet.py  upload_hf.py
honest_backtest/: __init__.py  adverse.py  fills.py  harness.py  metrics.py  settle.py  signal.py
honest_backtest/adapters/: __init__.py  parquet_pm.py  sqlite_pm.py
honest_backtest/examples/: __init__.py  no_overpriced.py
paper/: PAPER.md
tests/: conftest.py  test_adverse.py  test_calibration.py  test_fills.py  test_harness.py  test_metrics.py  test_settle.py
