[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honest-backtest"
version = "0.2.0"
description = "A backtester for binary prediction markets that grades against the price you could actually transact at — realizable fills, fees, and an adverse-selection diagnostic — not the optimistic paper fill."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "paper-clob" }]
keywords = ["backtest", "prediction-markets", "polymarket", "microstructure", "adverse-selection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7"]
parquet = ["pandas>=1.5", "pyarrow>=10"]

[project.urls]
Homepage = "https://github.com/JohanAlvarado/honest-backtest"
Issues = "https://github.com/JohanAlvarado/honest-backtest/issues"

[tool.hatch.build.targets.wheel]
packages = ["honest_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
